--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light ">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="header">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="65px"
                         height="31px">
                         <image x="0px" y="0px" width="65px" height="31px"
@@ -126,23 +126,23 @@
                 </button>
                 <div class="collapse navbar-collapse " id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item"><a href="#partfolio" class="nav-link">SERVICES</a></li>
-                        <li class="nav-item"><a href="#about" class="nav-link">ABOUT</a></li>
-                        <li class="nav-item"><a href="#work" class="nav-link">PORTFOLIO</a></li>
-                        <li class="nav-item"><a href="#team" class="nav-link">TEAM</a></li>
-                        <li class="nav-item"><a href="#packages" class="nav-link">PRICING</a></li>
-                        <li class="nav-item"><a href="#testimonial" class="nav-link">TESTIMONIAL</a></li>
+                        <li class="nav-item"><a href="#partfolio" class="link-nav">SERVICES</a></li>
+                        <li class="nav-item"><a href="#about" class="link-nav">ABOUT</a></li>
+                        <li class="nav-item"><a href="#work" class="link-nav">PORTFOLIO</a></li>
+                        <li class="nav-item"><a href="#team" class="link-nav">TEAM</a></li>
+                        <li class="nav-item"><a href="#packages" class="link-nav">PRICING</a></li>
+                        <li class="nav-item"><a href="#testimonial" class="link-nav">TESTIMONIAL</a></li>
                     </ul>
                     <div class="top-icon">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a class="link-nav" href="https://www.facebook.com/" target="blank"><i class="fab fa-facebook-f"></i></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="link-nav" href="https://twitter.com" target="blank"><i class="fab fa-twitter"></i></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><span>&#9675;&#9675;&#9675;</span></a>
+                                <a class="link-nav" href="#" target="blank"><span>&#9675;&#9675;&#9675;</span></a>
                             </li>
 
                         </ul>
@@ -937,9 +937,9 @@
                         <div class="box-h2">Alex Potter</div>
                         <div class="box-h3">Website Designer</div>
                         <div class="box-icon-social">
-                            <i class="fab fa-facebook-f"></i>
-                            <i class="fab fa-twitter"></i>
-                            <i class="fab fa-linkedin-in"></i>
+                            <a href="https://www.facebook.com" target="blank"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://twitter.com" target="blank"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.linkedin.cn" target="blank"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
@@ -949,9 +949,9 @@
                         <div class="box-h2">Alex Potter</div>
                         <div class="box-h3">Website Designer</div>
                         <div class="box-icon-social">
-                            <i class="fab fa-facebook-f"></i>
-                            <i class="fab fa-twitter"></i>
-                            <i class="fab fa-linkedin-in"></i>
+                            <a href="https://www.facebook.com" target="blank"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://twitter.com" target="blank"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.linkedin.cn" target="blank"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
@@ -961,9 +961,9 @@
                         <div class="box-h2">Alex Potter</div>
                         <div class="box-h3">Website Designer</div>
                         <div class="box-icon-social">
-                            <i class="fab fa-facebook-f"></i>
-                            <i class="fab fa-twitter"></i>
-                            <i class="fab fa-linkedin-in"></i>
+                            <a href="https://www.facebook.com" target="blank"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://twitter.com" target="blank"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.linkedin.cn" target="blank"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
@@ -1349,7 +1349,7 @@
                                 The most appealing part of the theme it's very clean and light. I liked the level of the
                                 provided service.<br> It reveals an individual approach to each customer
                             </div>
-                            <div class="block-testtimonial-p"><i class="fab fa-twitter"></i>@someone</div>
+                            <div class="block-testtimonial-p"><a href="https://twitter.com" target="blank"><i class="fab fa-twitter"></i>@someone</a></div>
                         </div>
                         <div class="carousel-item">
                             <div class="block-avatar-img">
@@ -1365,7 +1365,7 @@
                                 The most appealing part of the theme it's very clean and light. I liked the level of the
                                 provided service.<br> It reveals an individual approach to each customer
                             </div>
-                            <div class="block-testtimonial-p"><i class="fab fa-twitter"></i>@someone</div>
+                            <div class="block-testtimonial-p"><a href="https://twitter.com" target="blank"><i class="fab fa-twitter"></i>@someone</a></div>
                         </div>
                     </div>
                 </div>
@@ -1636,15 +1636,15 @@
                 </div>
                 <div class="col-md-6 col-sm-12">
                     <div class="footer-block-icon">
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-dribbble"></i>
-                        <i class="fab fa-behance"></i>
-                        <i class="fab fa-google-plus-g"></i>
-                        <i class="fab fa-linkedin-in"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-pinterest-p"></i>
-                        <i class="fab fa-flickr"></i>
+                        <a href="https://www.facebook.com" target="blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com" target="blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://dribbble.com" target="blank"></a><i class="fab fa-dribbble"></i>
+                        <a href="https://www.behance.net" target="blank"></a><i class="fab fa-behance"></i>
+                        <a href="https://myaccount.google.com" target="blank"></a><i class="fab fa-google-plus-g"></i>
+                        <a href="https://www.linkedin.cn" target="blank"></a><i class="fab fa-linkedin-in"></i>
+                        <a href="https://www.instagram.com" target="blank"></a><i class="fab fa-instagram"></i>
+                        <a href="https://www.pinterest.ru" target="blank"></a><i class="fab fa-pinterest-p"></i>
+                        <a href="https://www.flickr.com/" target="blank"></a><i class="fab fa-flickr"></i>
                     </div>
                 </div>
             </div>
