--- a/index.html
+++ b/index.html
@@ -10,77 +10,8 @@
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/bootstrap-4.0.0.css">
     <link rel="stylesheet" href="./css/styles.min.css">
+    <link rel="stylesheet" href="./css/media.css">
     <script src="./js/jquery-3.4.1.min.js"></script>
-
-    <script>
-        jQuery(document).ready(function ($) {
-            $('.counter').counterUp({
-                delay: 10,
-                time: 1000
-            });
-        });
-    </script>
-    <style>
-            @media (max-width: 575.98px) {
-                #services .block-services .block-services-h2{
-                    font-size: 40px;
-                }
-                #about .block-about .about-h2{
-                    font-size: 40px;
-                }
-                #partfolio .block-partfolio .block-partfolio-h2{
-                    font-size: 40px;
-                }
-                #features .block-features .block-features-h2{
-                    font-size: 30px;
-                }
-                #features .block-tabs .nav-my .nav-item{
-                    width: 100%;
-                    text-align: center;
-                }
-                #work .block-work .block-work-h2{
-                    font-size: 40px;
-                }
-                #work .gallery .nav .nav-item{
-                    width: 100%;
-                    text-align: center;
-                }
-                #platform .platform-block .block-platform{
-                    width: 100%;
-                }
-                #platform .platform-block .block-platform .block .block-platform-text{
-                    width: 100%;
-                }
-                #platform .platform-block .block-platform .block .block-platform-text .bold{
-                    font-size: 18px;
-                }
-                #contact .block-contact .block-contact-h2{
-                    font-size: 40px;
-                }
-                #bottom-info .item:after{
-                    content: none
-                }
-                footer .footer-block-icon .fab{
-                    font-size: 23px;
-                    margin-right: 10px;
-                }
-                #infinite .block-infinite-h2{
-                    font-size: 40px;
-                }
-                #subesribe .block-subesribe .subesribe-input .fas{
-                    top: 67px;
-                }
-                #partfolio .partfolio-item .block-partfolio-text .block-text{
-                    font-size: 14px;
-                }
-                footer .footer-block{
-                    justify-content: center;
-                }
-                footer .footer-block-icon{
-                    justify-content: center;
-                }
-            }
-        </style>
 </head>
 
 <body>
