--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-sm-12">
+                <div class="col-md-4 col-sm-12">
                     <div class="item">
                         <div class="item-img">
                             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -135,7 +135,7 @@
                             harum! Architecto, enim minus?</div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-12">
+                <div class="col-md-4 col-sm-12">
                     <div class="item">
                         <div class="item-img">
                             <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg"
@@ -165,7 +165,7 @@
                             harum! Architecto, enim minus?</div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-12">
+                <div class="col-md-4 col-sm-12">
                     <div class="item">
                         <div class="item-img">
                             <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg"
