--- a/index.html
+++ b/index.html
@@ -1439,7 +1439,7 @@
                 </div>
                 <div class="col-md-5 col-sm-12">
                     <div class="text">
-                        This will be replaced with the Google Map.
+                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac61cc064fe674186fab01fc1c21b057310bda57ecc405fe8ce398de296cd4f1e&amp;width=100%&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
                     </div>
                 </div>
 
