--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@
 	<section id="subesribe">
 		<div class="container">
 			<div class="row">
-				<div class="offset-lg-7 offset-sm-0 col-sm-12">
+				<div class="offset-lg-7 offset-sm-0 col-md-6 col-sm-12">
 					<div class="block-subesribe">
 						<div class="subesribe-title">subesribe</div>
 						<div class="subesribe-input">
