--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header id="header" class="main-header">
 		<div class="header-video-block">
 			<video preload="auto" loop id="my-video" width="100%" height="90vh">
-				<source src="./img/Современная верстка сайта - Начинаем с нуля.mp4" type="video/mp4">
+				<source src="./img/Современная_верстка.mp4" type="video/mp4">
 				<!-- MP4 для Safari, IE9, iPhone, iPad, Android, и Windows Phone 7 -->
 			</video>
 		</div>
