--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-sm-12">
-					<img class="img-responsiv" src="./img/Layer 49.png" alt="images" height="auto">
+					<img class="img-responsivee" src="./img/Layer 49.png" alt="images" height="auto">
 				</div>
 				<div class="col-lg-6 col-sm-12">
 					<div class="block-title">
@@ -1176,7 +1176,7 @@
 	<section id="subesribe">
 		<div class="container">
 			<div class="row">
-				<div class="offset-lg-7 offset-sm-0 col-md-6 col-sm-12">
+				<div class="offset-lg-7 offset-sm-0 col-md-5 col-sm-12">
 					<div class="block-subesribe">
 						<div class="subesribe-title">subesribe</div>
 						<div class="subesribe-input">
@@ -1660,13 +1660,13 @@
 					<div class="footer-block-icon">
 						<a href="https://www.facebook.com" target="blank"><i class="fab fa-facebook-f"></i></a>
 						<a href="https://twitter.com" target="blank"><i class="fab fa-twitter"></i></a>
-						<a href="https://dribbble.com" target="blank"></a><i class="fab fa-dribbble"></i>
-						<a href="https://www.behance.net" target="blank"></a><i class="fab fa-behance"></i>
-						<a href="https://myaccount.google.com" target="blank"></a><i class="fab fa-google-plus-g"></i>
-						<a href="https://www.linkedin.cn" target="blank"></a><i class="fab fa-linkedin-in"></i>
-						<a href="https://www.instagram.com" target="blank"></a><i class="fab fa-instagram"></i>
-						<a href="https://www.pinterest.ru" target="blank"></a><i class="fab fa-pinterest-p"></i>
-						<a href="https://www.flickr.com/" target="blank"></a><i class="fab fa-flickr"></i>
+						<a href="https://dribbble.com" target="blank"><i class="fab fa-dribbble"></i></a>
+						<a href="https://www.behance.net" target="blank"><i class="fab fa-behance"></i></a>
+						<a href="https://myaccount.google.com" target="blank"><i class="fab fa-google-plus-g"></i></a>
+						<a href="https://www.linkedin.cn" target="blank"><i class="fab fa-linkedin-in"></i></a>
+						<a href="https://www.instagram.com" target="blank"><i class="fab fa-instagram"></i></a>
+						<a href="https://www.pinterest.ru" target="blank"><i class="fab fa-pinterest-p"></i></a>
+						<a href="https://www.flickr.com/" target="blank"><i class="fab fa-flickr"></i></a>
 					</div>
 				</div>
 			</div>
