--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<i class="fas fa-angle-double-up"></i>
 		</div>
 	</header>
-	<sestion id="services">
+	<section id="services">
 		<div class="container">
 			<div class="row">
 				<div class="col">
@@ -212,7 +212,7 @@
 				</div>
 			</div>
 		</div>
-	</sestion>
+	</section>
 	<hr class="100vw">
 	<section id="about">
 		<div class="container">
@@ -474,7 +474,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-sm-12 mb-2">
+				<div class="col-lg-4 col-sm-12 mb-4_5">
 					<div class="portfolio-item">
 						<div class="item-title">Web Maintenance</div>
 						<div class="item-img">
