--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
 	<header id="header" class="main-header">
 		<div class="header-video-block">
-			<video preload="auto" loop id="my-video" width="100%" height="90vh">
-				<source src="./img/Современная_верстка.mp4" type="video/mp4">
+			<video preload="auto" autoplay loop id="my-video" width="100%" height="90vh">
+				<source src="./img/Beautiful, Free Tech Stock Video Footage for your Homepage (6).mp4" type="video/mp4">
 				<!-- MP4 для Safari, IE9, iPhone, iPad, Android, и Windows Phone 7 -->
 			</video>
 		</div>
@@ -32,7 +32,7 @@
 						<p class="header-p">Get The Most Converstion Rate Easily.</p>
 					</div>
 					<div class="header-img-video" onclick="playVid()">
-						<button class="fas fa-play"></button>
+						<button class="fas fa-pause"></button>
 					</div>
 					<div class="header-form">
 						<form class="form" action="">
