--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<header id="header" class="main-header">
 		<div class="header-video-block">
-			<video preload="auto" autoplay loop id="my-video" width="100%" height="90vh">
+			<video preload="auto" loop id="my-video" width="100%" height="90vh">
 				<source src="./img/Beautiful, Free Tech Stock Video Footage for your Homepage (6).mp4" type="video/mp4">
 				<!-- MP4 для Safari, IE9, iPhone, iPad, Android, и Windows Phone 7 -->
 			</video>
@@ -28,11 +28,11 @@
 				<div class="col">
 					<div class="header-text">
 						<h6 class="header-h6">Content Description</h6>
-						<div class="header-h1">See the world through our product</div>
+						<h1 class="header-h1">See the world through our product</h1>
 						<p class="header-p">Get The Most Converstion Rate Easily.</p>
 					</div>
 					<div class="header-img-video" onclick="playVid()">
-						<button class="fas fa-pause"></button>
+						<button class="fas fa-play"></button>
 					</div>
 					<div class="header-form">
 						<form class="form" action="">
