--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 						</form>
 					</div>
 					<p class="header-p--bottom">* We don’t share your personal<br>info with anyone Check out our <a
-							href="#" class="green">Policy</a> & for more information <a href="#contact" class="green">Contact
+							href="#" class="green">Policy</a> & for more information <a href="#contact"
+							class="green">Contact
 							Us</a>.
 					</p>
 				</div>
@@ -251,7 +252,7 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-8 col-sm-12">
-					<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+					<div id="carouselExampleIndicators" class="carousel vert slide" data-ride="carousel">
 						<ol class="carousel-indicators-my">
 							<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 							<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -361,7 +362,7 @@
 								</g>
 							</svg>
 						</div>
-						<div class="block-portfolio-p">Choose your required service from here</div>
+						<div class="block-portfolio-p mt-4">Choose your required service from here</div>
 						<div class="block-portfolio-h2">Services We <span class="green">Provide</span></div>
 					</div>
 				</div>
@@ -925,7 +926,7 @@
 				<div class="col-lg-4 col-sm-12">
 					<div class="team-box">
 						<div class="box-img">
-							<img class="img-responsive" src="img/SRunDgkDK60 (1).jpg" alt="">
+							<img class="img-responsive" src="img/SRunDgkDK60 (1).jpg" alt="img">
 						</div>
 						<div class="box-h2">Alex Potter</div>
 						<div class="box-h3">Website Designer</div>
@@ -1049,7 +1050,7 @@
 						<div class="col-md-5 col-sm-12 mt-2">
 							<a href="#" class="my-bt mb-4">Get Infinite Now</a>
 						</div>
-						<div class="col-md-7 col-sm-12 link-me">
+						<div class="col-md-7 col-sm-12 link-me mt-2">
 							<a href="#" class="my-link mt-4">View More</a>
 						</div>
 					</div>
@@ -1253,7 +1254,7 @@
 							</div>
 						</div>
 
-						<div class="block-package-p" style="line-height: 67px"> Per Month</div>
+						<div class="block-package-p"> Per Month</div>
 						<div class="block-package-services">
 							<div class="services-item"><span class="bold">Unlimited </span>Bandwidth</div>
 							<div class="services-item"><span class="bold">Unlimited </span>Space</div>
@@ -1262,8 +1263,8 @@
 							<div class="services-item"><span class="bold">Cpanel </span>Access</div>
 						</div>
 						<div class="block-btn"><a href="!#">Get Started</a></div>
-						<div class="block-package-p">30 Day One User</div>
-						<div class="block-package-p">Try Our Product Now </div>
+						<div class="block-package-p-bottom">30 Day One User</div>
+						<div class="block-package-p-bottom">Try Our Product Now </div>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-12">
@@ -1274,7 +1275,7 @@
 								<p>$99</p>
 							</div>
 						</div>
-						<div class="block-package-p" style="line-height: 67px">Per Month</div>
+						<div class="block-package-p">Per Month</div>
 						<div class="block-package-services">
 							<div class="services-item"><span class="bold">Unlimited </span>Bandwidth</div>
 							<div class="services-item"><span class="bold">Unlimited </span>Space</div>
@@ -1283,8 +1284,8 @@
 							<div class="services-item"><span class="bold">Cpanel </span>Access</div>
 						</div>
 						<div class="block-btn"><a href="!#">Get Started</a></div>
-						<div class="block-package-p">30 Day One User</div>
-						<div class="block-package-p">Try Our Product Now </div>
+						<div class="block-package-p-bottom">30 Day One User</div>
+						<div class="block-package-p-bottom">Try Our Product Now </div>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-12">
@@ -1295,7 +1296,7 @@
 								<p>$149</p>
 							</div>
 						</div>
-						<div class="block-package-p" style="line-height: 67px">Per Month</div>
+						<div class="block-package-p">Per Month</div>
 						<div class="block-package-services">
 							<div class="services-item"><span class="bold">Unlimited </span>Bandwidth</div>
 							<div class="services-item"><span class="bold">Unlimited </span>Space</div>
@@ -1304,11 +1305,14 @@
 							<div class="services-item"><span class="bold">Cpanel </span>Access</div>
 						</div>
 						<div class="block-btn"><a href="!#">Get Started</a></div>
-						<div class="block-package-p">30 Day One User</div>
-						<div class="block-package-p">Try Our Product Now </div>
+						<div class="block-package-p-bottom">30 Day One User</div>
+						<div class="block-package-p-bottom">Try Our Product Now </div>
 					</div>
 				</div>
 			</div>
+			<div class="packedge-text-footer text-center">Want to know more ? <a href="#" class="green">read
+					article</a>, check <a href="#" class="green">FAQ</a>, or <a href="#contact" class="green">contact
+					us</a></div>
 		</div>
 	</section>
 	<section id="platform">
@@ -1317,27 +1321,32 @@
 				<div class="col">
 					<div class="platform-block">
 						<div class="block-title">Get it right now</div>
-						<div class="block-p">Supported By Every Platfrom <span class="green">know more</span></div>
-						<div class="block-platform">
-							<a class="block ios" href="https://www.apple.com" target="blank">
-								<div class="block-img"><i class="fab fa-apple"></i></div>
-								<div class="block-platform-text">Get From<br><span class="bold">App Store</span></div>
-							</a>
+						<div class="block-p">Supported By Every Platfrom <a href="#" class="green">know more</span>
 						</div>
-						<div class="block-platform">
-							<a href="https://www.android.com" target="blank" class="block android">
-								<div class="block-img"><i class="fab fa-android"></i></div>
-								<div class="block-platform-text">Get it on<br><span class="bold">Google play</span>
-								</div>
-							</a>
-						</div>
-						<div class="block-platform">
-							<a href="https://www.microsoft.com/ru-ru/windows/windows-10-mobile-upgrade" target="blank"
-								class="block windows">
-								<div class="block-img"><i class="fab fa-windows"></i></div>
-								<div class="block-platform-text">Download for<br><span class="bold">Windows Phone</span>
-								</div>
-							</a>
+						<div class="container-block-platform">
+							<div class="block-platform">
+								<a class="block ios" href="https://www.apple.com" target="blank">
+									<div class="block-img"><i class="fab fa-apple"></i></div>
+									<div class="block-platform-text">Get From<br><span class="bold">App Store</span>
+									</div>
+								</a>
+							</div>
+							<div class="block-platform">
+								<a href="https://www.android.com" target="blank" class="block android">
+									<div class="block-img"><i class="fab fa-android"></i></div>
+									<div class="block-platform-text">Get it on<br><span class="bold">Google play</span>
+									</div>
+								</a>
+							</div>
+							<div class="block-platform">
+								<a href="https://www.microsoft.com/ru-ru/windows/windows-10-mobile-upgrade"
+									target="blank" class="block windows">
+									<div class="block-img"><i class="fab fa-windows"></i></div>
+									<div class="block-platform-text">Download for<br><span class="bold">Windows
+											Phone</span>
+									</div>
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -1510,16 +1519,18 @@
 							<div class="col mb-2"><input class="form-control" type="text" placeholder="Your Name"></div>
 							<div class="col mb-2"><input class="form-control" type="email" placeholder="Email"></div>
 						</div>
-						<div class="group">
+						<div class="input-group mt-2">
 							<div class="col mb-2">
 								<input class="form-control" type="text" placeholder="Subject">
 							</div>
 
 						</div>
-						<div class="col mb-2">
-							<textarea class="form-control" name="" id="" cols="30" rows="10"
-								placeholder="Your Message"></textarea>
-						</div>
+						
+							<div class="col mt-3">
+								<textarea class="form-control" name="" id="" cols="10" rows="8"
+									placeholder="Your Message"></textarea>
+							</div>
+						
 						<div class="col">
 							<input class="bt" type="submit" value="Send Message">
 						</div>
