--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<p class="header-p">Get The Most Converstion Rate Easily.</p>
 					</div>
 					<div class="header-img-video" onclick="playVid()">
-						<button class="fas fa-play"></button>
+						<button class="far fa-play-circle"></button>
 					</div>
 					<div class="header-form">
 						<form class="form" action="">
@@ -123,8 +123,8 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4 col-sm-12">
-					<div class="item">
+				<div class="col-md-4 col-sm-12 item">
+					<div class="">
 						<div class="item-img">
 							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
 								xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="69px" height="69px"
@@ -147,8 +147,8 @@
 							ut labore et dolore.</div>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-12">
-					<div class="item">
+				<div class="col-md-4 col-sm-12 item">
+					<div class="">
 						<div class="item-img">
 							<svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg"
 								xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="69px" height="69px"
@@ -178,8 +178,8 @@
 							ut labore et dolore.</div>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-12">
-					<div class="item">
+				<div class="col-md-4 col-sm-12 item">
+					<div class="">
 						<div class="item-img">
 							<svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg"
 								xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="69px" height="69px"
@@ -368,7 +368,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-4 col-sm-12 mb-4_5">
+				<div class="col-lg-4 col-sm-12 mb-4_5 item">
 					<div class="portfolio-item">
 						<div class="item-title-b">Web Design</div>
 						<ul class="block-portfolio-text">
@@ -378,7 +378,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-lg-4 col-sm-12 mb-4_5">
+				<div class="col-lg-4 col-sm-12 mb-4_5 item">
 					<div class="portfolio-item">
 						<div class="item-title">Web Development</div>
 						<div class="item-img">
@@ -399,7 +399,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-sm-12 mb-4_5">
+				<div class="col-lg-4 col-sm-12 mb-4_5 item">
 					<div class="portfolio-item">
 						<div class="item-title">Web Maintenance</div>
 						<div class="item-img">
@@ -435,7 +435,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-sm-12 mb-4_5">
+				<div class="col-lg-4 col-sm-12 mb-4_5 item">
 					<div class="portfolio-item">
 						<div class="item-title-b">Web Design</div>
 						<ul class="block-portfolio-text">
@@ -445,7 +445,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-lg-4 col-sm-12 mb-4_5">
+				<div class="col-lg-4 col-sm-12 mb-4_5 item">
 					<div class="portfolio-item">
 						<div class="item-title">Web Development</div>
 						<div class="item-img">
@@ -475,7 +475,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-sm-12 mb-4_5">
+				<div class="col-lg-4 col-sm-12 mb-4_5 item">
 					<div class="portfolio-item">
 						<div class="item-title">Web Maintenance</div>
 						<div class="item-img">
@@ -981,7 +981,7 @@
 						<p class="title-p">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor.</p>
 					</div>
 					<div class="row">
-						<div class="col-md-6 col-sm-12">
+						<div class="col-md-6 col-sm-12 item">
 							<div class="block-new-features">
 								<div class="span"><i class="fas fa-arrow-circle-right"></i></div>
 								<a href="#">
@@ -1013,7 +1013,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col-md-6 col-sm-12">
+						<div class="col-md-6 col-sm-12 item">
 							<div class="block-new-features">
 								<div class="span"><i class="fas fa-arrow-circle-right"></i></div>
 								<a href="#">
@@ -1061,7 +1061,7 @@
 		<div class="container">
 			<div class="overlay-text">70% People Belive Another Consumer's Opinion Posted Online</div>
 			<div class="row">
-				<div class="col-md-3 col-sm-12">
+				<div class="col-md-3 col-sm-12 item">
 					<div class="block-overlay">
 						<div class="block-overlay-icon">
 							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -1086,7 +1086,7 @@
 						<div class="block-overlay-p">Facebook Like</div>
 					</div>
 				</div>
-				<div class="col-md-3 col-sm-12">
+				<div class="col-md-3 col-sm-12 item">
 					<div class="block-overlay">
 						<div class="block-overlay-icon"><svg version="1.1" id="Layer_1"
 								xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
@@ -1122,7 +1122,7 @@
 						<div class="block-overlay-p">Twitter Follower</div>
 					</div>
 				</div>
-				<div class="col-md-3 col-sm-12">
+				<div class="col-md-3 col-sm-12 item">
 					<div class="block-overlay">
 						<div class="block-overlay-icon"><svg version="1.1" id="Layer_1"
 								xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
@@ -1146,7 +1146,7 @@
 						<div class="block-overlay-p">Happy Clients</div>
 					</div>
 				</div>
-				<div class="col-md-3 col-sm-12">
+				<div class="col-md-3 col-sm-12 item">
 					<div class="block-overlay">
 						<div class="block-overlay-icon"><svg version="1.1" id="Layer_1"
 								xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
@@ -1179,7 +1179,7 @@
 			<div class="row">
 				<div class="offset-lg-7 offset-sm-0 col-md-5 col-sm-12">
 					<div class="block-subesribe">
-						<div class="subesribe-title">subesribe</div>
+						<div class="subesribe-title">Subscribe</div>
 						<div class="subesribe-input">
 							<input type="email" placeholder="Enter your email">
 							<a href="mailto:exemple@example.com"><i class="fas fa-envelope"></i></a>
@@ -1245,7 +1245,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4 col-sm-12">
+				<div class="col-md-4 col-sm-12 item">
 					<div class="box-package">
 						<div class="title">basic</div>
 						<div class="boc-curency">
@@ -1267,7 +1267,7 @@
 						<div class="block-package-p-bottom">Try Our Product Now </div>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-12">
+				<div class="col-md-4 col-sm-12 item">
 					<div class="box-package">
 						<div class="title">premium</div>
 						<div class="boc-curency">
@@ -1288,7 +1288,7 @@
 						<div class="block-package-p-bottom">Try Our Product Now </div>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-12">
+				<div class="col-md-4 col-sm-12 item">
 					<div class="box-package">
 						<div class="title">ultimate</div>
 						<div class="boc-curency">
@@ -1321,7 +1321,7 @@
 				<div class="col">
 					<div class="platform-block">
 						<div class="block-title">Get it right now</div>
-						<div class="block-p">Supported By Every Platfrom <a href="#" class="green">know more</span>
+						<div class="block-p">Supported By Every Platfrom<a href="#" class="green"> know more</span>
 						</div>
 						<div class="container-block-platform">
 							<div class="block-platform">
