--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 				<div class="col-lg-4 col-sm-12">
 					<div class="accordion" id="accordionExample">
 						<div class="card">
-							<div class="box-item" data-toggle="collapse" data-target="#collapseOne"
+							<div class="box-item" data-toggle="collapse" data-target="#collapseOne" role="button"
 								aria-expanded="true">
 								<div class="box-item-h2">lorem message</div>
 								<div class="box-item-par">first message</div>
@@ -302,12 +302,12 @@
 							</div>
 						</div>
 						<div class="card">
-							<div class="box-item collapsed" data-toggle="collapse" data-target="#collapseTwo"
+							<div class="box-item collapsed" data-toggle="collapse" data-target="#collapseTwo" role="button"
 								aria-expanded="false">
 								<div class="box-item-h2">lorem message</div>
 								<div class="box-item-par">second message</div>
 							</div>
-							<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+							<div id="collapseTwo" class="collapse" 
 								data-parent="#accordionExample">
 								<div class="box-item-body">
 									Nunc placerat mi id nisi interdum mollis. Praesent
@@ -318,7 +318,7 @@
 							</div>
 						</div>
 						<div class="card">
-							<div class="box-item collapsed" data-toggle="collapse" data-target="#collapseThree"
+							<div class="box-item collapsed" data-toggle="collapse" data-target="#collapseThree" role="button"
 								aria-expanded="false">
 								<div class="box-item-h2">lorem message</div>
 								<div class="box-item-par">third message</div>
@@ -1422,8 +1422,8 @@
 				</div>
 				<div class="col-lg-2 col-md-12 pb-4">
 					<div class="block-text">
-						<svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"
-							style="fill:#8a8a8a" style="fill:#000000" height="30" width="210" id="svg3745" version="1.1"
+						<svg  xmlns="http://www.w3.org/2000/svg"
+							style="fill:#8a8a8a" height="30" width="210" id="svg3745" version="1.1"
 							viewBox="0 0 210 30" class="">
 
 							<defs id="defs3749" />
@@ -1435,7 +1435,7 @@
 				</div>
 				<div class="col-lg-2 col-md-12 pb-4">
 					<div class="block-text">
-						<svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" id="svg3785"
+						<svg xmlns="http://www.w3.org/2000/svg" id="svg3785"
 							style="fill:#8a8a8a" version="1.1" viewBox="0 0 108 30" height="30" width="108">
 							<defs id="defs3789" />
 							<path style="stroke-width:0.95409131" id="path3783"
@@ -1454,7 +1454,7 @@
 				</div>
 				<div class="col-lg-3 col-md-12 pb-4">
 					<div class="block-text">
-						<svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" id="svg10490"
+						<svg xmlns="http://www.w3.org/2000/svg" id="svg10490"
 							height="30" width="203" version="1.1">
 							<defs id="defs10492" />
 							<path style="fill:#8a8a8a;stroke-width:0.21278374" id="path10468"
