--- a/index.html
+++ b/index.html
@@ -1415,7 +1415,7 @@
 
 	</section>
 	<section id="partners">
-		<div class="container-my">
+		<div class="container">
 			<div class="row">
 				<div class="col-lg-2 col-md-12 pb-4">
 					<div class="block-text-p">Featured in -:</div>
