--- a/index.html
+++ b/index.html
@@ -1389,10 +1389,10 @@
 						</div>
 						<div class="block-reiting"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
 								class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
-						<div class="block-testtimonial-text">
+						<h2 class="block-testtimonial-text">
 							The most appealing part of the theme it's very clean and light. I liked the level of the
 							provided service.<br> It reveals an individual approach to each customer
-						</div>
+						</h2>
 						<div class="block-testtimonial-p"><a href="https://twitter.com" target="blank"><i
 									class="fab fa-twitter"></i>@someone</a></div>
 					</div>
@@ -1406,10 +1406,10 @@
 						</div>
 						<div class="block-reiting"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
 								class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
-						<div class="block-testtimonial-text">
+						<h2 class="block-testtimonial-text">
 							The most appealing part of the theme it's very clean and light. I liked the level of the
 							provided service.<br> It reveals an individual approach to each customer
-						</div>
+						</h2>
 						<div class="block-testtimonial-p"><a href="https://twitter.com" target="blank"><i
 									class="fab fa-twitter"></i>@someone</a></div>
 					</div>
@@ -1422,7 +1422,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-2 col-md-12 pb-4 item">
-					<div class="block-text-p">Featured in -:</div>
+					<h2 class="block-text-p">Featured in -:</h2>
 				</div>
 				<div class="col-lg-2 col-md-12 pb-4 item">
 					<div class="block-text">
