--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="./css/main.min.css">
-	<script src="/js/jquery-3.4.1.min.js"></script>
+	<script src="./js/jquery-3.4.1.min.js"></script>
 
 </head>
 
@@ -36,10 +36,10 @@
 						<!--<img src="./img/video_icon.png" alt="">-->
 					</div>
 					<div class="header-form">
-						<form class="form" method="POST">
-							<input class="input-text" id="name" name="name" type="text" placeholder="Your Name" required>
-							<input class="input-text" id="email" name="email" type="email" placeholder="Email Adress" required>
-							<input class="btn-sub" id='submit' type="submit" value="Subscribe »">
+						<form class="form" action="action.php" method="POST">
+							<input class="input-text" name="name" type="text" placeholder="Your Name">
+							<input class="input-text" name="email" type="email" placeholder="Email Adress">
+							<input class="btn-sub" type="submit" onclick="this.disabled=true;" value="Subscribe »">
 						</form>
 					</div>
 					<p class="header-p--bottom">* We don’t share your personal<br>info with anyone Check out our <a
@@ -1518,25 +1518,25 @@
 			</div>
 			<div class="row">
 				<div class="col-md-7 col-sm-12">
-					<form method="post" class="form__contact" style="width:100%">
+					<form action="action.php" method="post" class="form__contact" style="width:100%">
 						<div class="input-group">
-							<div class="col mb-2"><input class="form-control" id ="name_contact" name="Name" type="text" placeholder="Your Name" required></div>
-							<div class="col mb-2"><input class="form-control" id="email_contact" name="email" type="email" placeholder="Email" required></div>
+							<div class="col mb-2"><input class="form-control" name="Name" type="text" placeholder="Your Name"></div>
+							<div class="col mb-2"><input class="form-control" name="Email" type="email" placeholder="Email"></div>
 						</div>
 						<div class="input-group mt-2">
 							<div class="col mb-2">
-								<input class="form-control" id="subject_contact" name="Subject" type="text" placeholder="Subject" required>
+								<input class="form-control" name="Subject" type="text" placeholder="Subject">
 							</div>
 
 						</div>
 
 						<div class="col mt-3">
-							<textarea class="form-control" id="textarea_contact" name="textarea" id="textarea" cols="10" rows="8"
-								placeholder="Your Message" required></textarea>
+							<textarea class="form-control" name="Textarea" id="textarea" cols="10" rows="8"
+								placeholder="Your Message"></textarea>
 						</div>
 
 						<div class="col">
-							<input class="bt" id ="submit_contact" type="submit" value="Send Message">
+							<input class="bt" type="submit" value="Send Message">
 						</div>
 
 					</form>
@@ -1695,10 +1695,10 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
-	<script src="/js/maugallery.js"></script>
+	<script src="./js/maugallery.js"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js'></script>
-	<script src="/js/jquery.spincrement.min.js"></script>
-	<script src="/js/scripts.min.js"></script>
+	<script src="./js/jquery.spincrement.min.js"></script>
+	<script src="./js/scripts.min.js"></script>
 
 </body>
 
