--- a/index.html
+++ b/index.html
@@ -1421,6 +1421,7 @@
 	<section id="partners">
 		<div class="container">
 			<div class="row">
+				<h2 class="visually-hidden"></h2>
 				<div class="col-lg-2 col-md-12 pb-4 item">
 					<div class="block-text-p">Featured in -:</div>
 				</div>
