--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" href="./css/main.min.css">
-	<script src="./js/jquery-3.4.1.min.js"></script>
+	<link rel="stylesheet" href="css/main.min.css">
+	<script src="js/jquery-3.4.1.min.js"></script>
 
 </head>
 
@@ -74,15 +74,15 @@
 					<div class="top-icon">
 						<ul class="navbar-nav ml-auto">
 							<li class="nav-item">
-								<a class="link-nav" href="https://www.facebook.com/" target="blank"><i
+								<a class="link-navv" href="https://www.facebook.com" target="blank"><i
 										class="fab fa-facebook-f"></i></a>
 							</li>
 							<li class="nav-item">
-								<a class="link-nav" href="https://twitter.com" target="blank"><i
+								<a class="link-navv" href="https://twitter.com" target="blank"><i
 										class="fab fa-twitter"></i></a>
 							</li>
 							<li class="nav-item">
-								<a class="link-nav" href="#" target="blank"><i class="fas fa-ellipsis-h"></i></a>
+								<a class="link-navv" href="#" target="blank"><i class="fas fa-ellipsis-h"></i></a>
 							</li>
 
 						</ul>
@@ -1696,10 +1696,10 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
-	<script src="./js/maugallery.js"></script>
+	<script src="js/maugallery.js"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js'></script>
-	<script src="./js/jquery.spincrement.min.js"></script>
-	<script src="./js/scripts.min.js"></script>
+	<script src="js/jquery.spincrement.min.js"></script>
+	<script src="js/scripts.min.js"></script>
 
 </body>
 
