--- a/index.html
+++ b/index.html
@@ -16,27 +16,32 @@
 
 <body>
     <header class="main__header" style="background-image: url('./img/4.jpg');">
+        <div class="fixed-menu">
+            <i class="material-icons menu">menu</i>
+            <i class="material-icons close">close</i>
+        </div>
         <div class="toolbar">
             <div class="toolbar__tel">
+                <img src="./img/Логотип_мельница.png" alt="Логотип">
                 <div class="toolbar__logo">Органика</div>
             </div>
             <nav class="navbar">
                 <ul>
                     <li> <a class="waves-effect waves-light" href="">Главная</a></li>
                     <li> <a class="waves-effect waves-light" href="">Товары и услуги</a></li>
-                    <li> <a class="waves-effect waves-light" href="">Технология</a></li>
                     <li> <a class="waves-effect waves-light" href="">Рекомендации по пременению</a></li>
-                    <li> <a class="waves-effect waves-light" href="">Принцып работы</a></li>
+                    <li> <a class="waves-effect waves-light" href="">Азотные минельные удобрения</a></li>
                     <li> <a class="waves-effect waves-light" href="">Сертификаты</a></li>
+                    <li> <a class="waves-effect waves-light" href="">Отзывы</a></li>
                     <li> <a class="waves-effect waves-light" href="">Контакты</a></li>
                 </ul>
             </nav>
             <div class="bottom_link">
                 <div class="tel">
-                    <a href="#" class="link"><i class="fas fa-phone"></i> 8(800)-808-00-00</a>
+                    <a href="tel:" class="link"><i class="fas fa-phone"></i> 8(800)-808-00-00</a>
                 </div>
                 <div class="tel">
-                    <a href="#" class="link"><i class="fas fa-phone"></i> 8(800)-808-00-00</a>
+                    <a href="#" class="link"><i class="fas fa-mobile-alt"></i> 8(800)-808-00-00</a>
                 </div>
                 <div class="tel">
                     <a href="mailto:organika.00@mail.ru" class="email"><i class="fas fa-envelope"></i>
@@ -65,7 +70,7 @@
                 <div class="content__item">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="./img/_1441-624.jpg">
+                            <img class="activator" src="./img/1441-624.jpg">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">Зерновые культуры<i
@@ -83,7 +88,7 @@
                 <div class="content__item">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="./img/_73289-74.jpg">
+                            <img class="activator" src="./img/73289-74.jpg">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">Зерновые культуры<i
@@ -177,8 +182,9 @@
             </div>
         </div>
     </footer>
-
+<script src="./js/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
